Add new macro messages and buttons in index.html

--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
     </div>
   </div>
 
+  <div class="macro">
+      <div class="macro-texto" id="macro2">Seu ticket foi recebido! Em breve um atendente irá te responder.</div>
+      <button onclick="copy('macro2')">Copiar</button>
+    </div>
+  </div>
+
+  <div class="macro">
+      <div class="macro-texto" id="macro2">Seu ticket foi recebido! Em breve um atendente irá te responder.</div>
+      <button onclick="copy('macro2')">Copiar</button>
+    </div>
+  </div>
+  
   <!-- Categoria Staff / Administração -->
   <div class="categoria">
     <h2>Staff / Administração</h2>
@@ -124,6 +136,17 @@
     </div>
   </div>
 
+  <div class="macro">
+      <div class="macro-texto" id="macro4">Lembre-se de seguir todas as regras do servidor. Qualquer dúvida estamos por aqui!</div>
+      <button onclick="copy('macro4')">Copiar</button>
+    </div>
+  </div>
+
+  <div class="macro">
+      <div class="macro-texto" id="macro4">Lembre-se de seguir todas as regras do servidor. Qualquer dúvida estamos por aqui!</div>
+      <button onclick="copy('macro4')">Copiar</button>
+    </div>
+  </div>
   <!-- Painel Admin -->
   <div id="adminPanel">
     <h2>Painel Admin</h2>
