Update GitHub repository user and name

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   </div>
 
 <script>
-const repoUser = "SEU_USUARIO";
-const repoName = "SEU_REPOSITORIO";
+const repoUser = "Koper-dev";
+const repoName = "index.html";
 const filePath = "macros.json";
 let githubToken = "";
 let fileSha = "";
